--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <h1>Hello World!!</h1>
 <div>
-    <img src="DSC_8816.jpeg" height="200">
+    <img src="DSC_8816.jpg" height="200">
 </div> 
 </html>
